tdf#163582: Fix scrolling distance increasing geometrically.

New scroll distance was previous distance multiplied by speed factor, but distance was not reset to base values when mouse not moved (or outside app window on some platforms), resulting in continuous multiply amplification. Break out base scroll values to separate variables to prevent multiply feedback. Add comments to help future code maintenance.

Change-Id: If11baff3b25521abce7436b44aaf8e6a19e54f45
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175657
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
(cherry picked from commit f9e2bc8d84fe729d7a501dc3acc6325e246f0b7d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175843